size down ribbon, make sure top nav is align

--- a/_sass/modules/_buttons.scss
+++ b/_sass/modules/_buttons.scss
@@ -89,12 +89,12 @@
 .fork-btn {
   position: absolute;
   display: block;
-  top: -23px;
+  top: -39px;
   right: -15px;
-  width: 180px;
+  width: 150px;
   overflow: hidden;
   height: 200px;
-  z-index: 9999;
+  z-index: 9011;
   background: url('../img/github-ribbon.svg') no-repeat center/contain;
 
   @media (max-width: 830px) {
