--- a/_sass/modules/_nav.scss
+++ b/_sass/modules/_nav.scss
@@ -8,6 +8,8 @@
     font-size: 13px;
     letter-spacing: 1px;
     text-align: right;
+    position: relative;
+    z-index: 9012;
 
     li {
       display: inline-block;
